@@ -1,3 +1,12 @@
+Sun Nov 16 01:01:29 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	* src/QGaimNotify.cpp:
+	* src/QGaimPrefsDialog.cpp:
+	* src/QGaimPrefsDialog.h:
+	  - Added message notification optionally using the buzzer and LED.
+
 Sat Nov 15 23:56:54 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
